--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   "dependencies": {
     "next": "12.0.2",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.4",
+    "sass": "^1.43.4",
+    "sharp": "^0.29.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "@types/react-burger-menu": "^2.8.2",
+    "@types/react-scroll": "^1.8.3",
+    "autoprefixer": "^10.4.0",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "typescript": "4.4.4"
