--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
@@ -18,6 +19,7 @@
     "sharp": "^0.29.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "@types/react-burger-menu": "^2.8.2",
